get recipe data from child

--- a/src/app/recipe/recipe-list/recipe-list.component.html
+++ b/src/app/recipe/recipe-list/recipe-list.component.html
@@ -6,6 +6,9 @@
 <hr>
 <div class="row">
     <div class="col-xs-12">
-        <app-recipe-item *ngFor="let recipeRow of recipes" [recipe]="recipeRow"></app-recipe-item>
+        <app-recipe-item 
+        *ngFor="let recipeRow of recipes" 
+        [recipe]="recipeRow" 
+        (getSelectedRecipe)="onRecipeSelected(recipeRow)"></app-recipe-item>
     </div>
 </div>
