using service to get selected recipe

--- a/src/app/recipe/recipe-list/recipe-list.component.html
+++ b/src/app/recipe/recipe-list/recipe-list.component.html
@@ -8,7 +8,6 @@
     <div class="col-xs-12">
         <app-recipe-item 
         *ngFor="let recipeRow of recipes" 
-        [recipe]="recipeRow" 
-        (getSelectedRecipe)="onRecipeSelected(recipeRow)"></app-recipe-item>
+        [recipe]="recipeRow"></app-recipe-item>
     </div>
 </div>
