--- a/src/app/recipe/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe/recipe-detail/recipe-detail.component.html
@@ -27,6 +27,8 @@
 </div>
 <div class="row">
     <div class="col-xs-12">
-        Ingredients
+        <ul class="list-group">
+            <li *ngFor="let ingredient of recipe.ingredients" class="list-group-item"> {{ ingredient.name }}  <span class="badge badge-primary badge-pill">{{ ingredient.amount }}</span></li>
+        </ul>
     </div>
 </div>
