--- a/src/app/recipe/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe/recipe-detail/recipe-detail.component.html
@@ -13,7 +13,7 @@
         <div appDropdown class="btn-group">
             <button class="btn btn-primary dropdown-toggle">Manage Recipe <span class="caret"></span></button>
             <ul class="dropdown-menu">
-                <li> <a href="#">To Shopping List</a> </li>
+                <li> <a (click)="addToShoppingList()" style="cursor: pointer;">To Shopping List</a> </li>
                 <li> <a href="#">Edit Recipe</a> </li>
                 <li> <a href="#">Delet Recipe</a> </li>
             </ul>
