get server using id on param

--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -2,8 +2,7 @@
   <div class="col-xs-12 col-sm-4">
     <div class="list-group">
       <a
-        [routerLink]="['/servers', server.id, 'edit']"
-        [queryParams]="{allowEdit: '1'}"
+        [routerLink]="['/servers', server.id]"
         class="list-group-item"
         *ngFor="let server of servers">
         {{ server.name }}
@@ -14,7 +13,7 @@
     <button class="btn btn-primary" (click)="onReload()">Refresh Page</button>
     <app-edit-server></app-edit-server>
     <hr>
-    <app-server></app-server>
+    <!-- <app-server></app-server> -->
   </div>
 </div>
 
