--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,8 @@
               id="username" 
               name="username" 
               class="form-control"
-              ngModel>
+              ngModel
+              required>
           </div>
           <button class="btn btn-default" type="button">Suggest an Username</button>
           <div class="form-group">
@@ -20,7 +21,11 @@
             id="email" 
             name="email" 
             class="form-control"
-            ngModel>
+            ngModel
+            required
+            email
+            #email="ngModel">
+            <span class="help-block" *ngIf="!email.valid">Please inser a valid value</span>
           </div>
         </div>
         <div class="form-group">
@@ -34,7 +39,9 @@
             <option value="teacher">Your first teacher?</option>
           </select>
         </div>
-        <button class="btn btn-primary" type="submit">Submit</button>
+        <button class="btn btn-primary" 
+          type="submit"
+          [disabled]="!form.valid">Submit</button>
       </form>
     </div>
   </div>
