--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,14 @@
               class="form-control">
               <span
                 *ngIf="!signupForm.get('userData.username').valid && signupForm.get('userData.username').touched"
-               class="help-block">Please enter a valid username!</span>
+               class="help-block">
+               <span
+               *ngIf="signupForm.get('userData.username').errors['nameIsForbidden']"
+              class="help-block">Please enter a valid username!</span>
+              <span
+               *ngIf="signupForm.get('userData.username').errors['required']"
+              class="help-block">Please enter a valid username!</span>
+              </span>
           </div>
           <div class="form-group">
             <label for="email">email</label>
